--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -795,9 +795,9 @@ header {
   top: 50%;
   left: 50%;
 
-  min-width: 528px;
+  width: 528px;
   min-height: 581px;
-  padding: 8px;
+  padding: 40px;
   background-color: var(--main-bg-color);
 
   transform: translate(-50%, -50%) scale(1);
@@ -805,7 +805,9 @@ header {
 }
 
 .close-button {
-  margin-left: auto;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 
   display: flex;
   align-items: center;
@@ -824,4 +826,43 @@ header {
 .close-button:hover,
 .close-button:focus {
   background-color: var(--second-bg-color);
+}
+
+.form {
+  margin: 0 auto;
+}
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.form-field input {
+  margin: 0;
+  padding: 12px 15px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-field label {
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.01em;
+  color: var(--second-text-color);
+}
+
+.form-field textarea {
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-field textarea::placeholder {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
