--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -819,14 +819,17 @@ header {
   border-radius: 50%;
   cursor: pointer;
 
+  fill: var(--main-text-color);
   background-color: var(--main-bg-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-button:hover,
 .close-button:focus {
-  background-color: var(--second-bg-color);
+  fill: var(--accent-color);
 }
+
+/* Forms */
 
 .form {
   margin: 0 auto;
@@ -834,7 +837,7 @@ header {
 .form-field {
   display: flex;
   flex-direction: column;
-  margin-bottom: 15px;
+  margin-bottom: 15\px;
 }
 
 .form-field input {
@@ -865,4 +868,28 @@ header {
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+}
+
+.submit-button {
+  display: flex;
+  align-items: center;
+  padding: 10px 55px;
+  margin: 0 auto;
+  border-style: none;
+  border-radius: 4px;
+  font-weight: 700;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  color: var(--main-bg-color);
+
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-button:hover {
+  background-color: rgba(24, 140, 232, 1);
 }
