--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -235,7 +235,6 @@ header {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
 
@@ -537,6 +536,7 @@ header {
 .footer-container {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .logo-footer {
@@ -634,6 +634,52 @@ header {
 .footer-soc-link:hover,
 .footer-soc-link:focus {
   background-color: var(--accent-color);
+}
+
+/* Footer form Форма в футере */
+
+.footer-form-container {
+  display: flex;
+  margin-left: auto;
+}
+
+.footer-form-caption {
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-bg-color);
+}
+
+.footer-form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.footer-submit-button {
+  margin-left: 12px;
+  padding: 10px 29px;
+
+  border-style: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  color: var(--main-bg-color);
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-submit-button:hover {
+  background-color: rgba(24, 140, 232, 1);
 }
 
 /* Main content Portfolio Портфолио */
@@ -834,33 +880,77 @@ header {
 .form {
   margin: 0 auto;
 }
-.form-field {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 15\px;
+
+.form-caption {
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
 }
 
-.form-field input {
+.form-field {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 28px;
+}
+
+.form-input {
   margin: 0;
-  padding: 12px 15px;
+  padding: 12px 15px 12px 42px;
+
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border-color: var(--accent-color);
+}
+
+.form-input:focus + .form-icon {
+  fill: var(--accent-color);
 }
 
 .form-field label {
-  margin-bottom: 4px;
+  position: absolute;
+  top: -18px;
+  left: 0;
+
   font-size: 12px;
   line-height: 1;
   letter-spacing: 0.01em;
   color: var(--second-text-color);
 }
 
-.form-field textarea {
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-text {
   padding: 12px 16px;
   margin-bottom: 20px;
   resize: none;
+  outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-text:focus {
+  border-color: var(--accent-color);
 }
 
 .form-field textarea::placeholder {
@@ -869,6 +959,20 @@ header {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
+
+/* початок недо-роботи 1:33 на другій лекціі*/
+
+.checkbox-label {
+  display: block;
+}
+
+.checkbox-icon {
+  display: inline-block;
+  border-radius: 4px;
+  border: 2px solid var(--main-text-color);
+}
+
+/* __________________ */
 
 .submit-button {
   display: flex;
