--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -535,7 +535,7 @@ header {
 
 .footer-container {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: center;
 }
 
@@ -640,6 +640,7 @@ header {
 
 .footer-form-container {
   display: flex;
+  align-items: flex-end;
   margin-left: auto;
 }
 
@@ -654,13 +655,24 @@ header {
   color: var(--main-bg-color);
 }
 
-.footer-form-field {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 15px;
+.footer-form-field input {
+  margin: 0;
+  padding: 15px 16px 15px 16px;
+  width: 358px;
+
+  background-color: transparent;
+  outline: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: var(--main-bg-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .footer-submit-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   margin-left: 12px;
   padding: 10px 29px;
 
@@ -680,6 +692,11 @@ header {
 
 .footer-submit-button:hover {
   background-color: rgba(24, 140, 232, 1);
+}
+
+.submit-button_icon {
+  margin-left: 10px;
+  fill: var(--main-bg-color);
 }
 
 /* Main content Portfolio Портфолио */
@@ -734,7 +751,7 @@ header {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-/* Boxes Ячейки портфолио-проектов*/
+/* Boxes Ячейки портфолио-проектов */
 
 .boxes-container {
   display: flex;
@@ -781,7 +798,7 @@ header {
   border: 1px solid #eeeeee;
 }
 
-/* Added всплывающий текст ячеек-проектов */
+/* Всплывающий текст ячеек-проектов */
 
 .box-thumb {
   position: relative;
@@ -812,7 +829,7 @@ header {
   transform: translateY(0);
 }
 
-/* Added Модальное окно */
+/* _____Модальное окно_____ */
 
 .backdrop.is-hidden {
   opacity: 0;
@@ -875,7 +892,7 @@ header {
   fill: var(--accent-color);
 }
 
-/* Forms */
+/* _______Forms________ */
 
 .form {
   margin: 0 auto;
@@ -938,9 +955,10 @@ header {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* ________________ */
+
 .form-text {
   padding: 12px 16px;
-  margin-bottom: 20px;
   resize: none;
   outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -960,16 +978,59 @@ header {
   color: rgba(117, 117, 117, 0.5);
 }
 
-/* початок недо-роботи 1:33 на другій лекціі*/
+/* _______________ */
 
-.checkbox-label {
-  display: block;
+.check-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
-.checkbox-icon {
-  display: inline-block;
-  border-radius: 4px;
-  border: 2px solid var(--main-text-color);
+.check_input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.check {
+  position: relative;
+
+  padding-left: 23px;
+  cursor: pointer;
+
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
+}
+
+.check_icon {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 16px;
+  height: 15px;
+
+  box-shadow: 0 0 0 2px var(--main-text-color);
+  border-radius: 2px;
+  background-color: var(--main-bg-color);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.check_input:checked + .check_icon {
+  box-shadow: 0 0 0 2px var(--accent-color);
+  background-color: var(--accent-color);
+}
+
+.check_link {
+  text-decoration: underline;
+  color: var(--accent-color);
 }
 
 /* __________________ */
