--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -24,10 +24,10 @@ li {
   list-style: none;
 }
 
-.nav-item:hover,
-.nav-iten:focus,
-.contacts-top:hover,
-.contacts-top:focus,
+.nav-list__item:hover,
+.nav-list__item:focus,
+.contacts-list__item:hover,
+.contacts-list__item:focus,
 .footer__contacts:hover,
 .footer__contacts:focus,
 .footer__address:hover,
@@ -53,7 +53,7 @@ img {
   height: auto;
 }
 
-.container {
+.section {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -61,6 +61,7 @@ img {
 }
 
 /* Header menu */
+
 header {
   width: 100%;
   height: 80px;
@@ -69,19 +70,19 @@ header {
   border-bottom: 1px solid #ececec;
 }
 
-.header-container {
+.header--position {
   display: flex;
   height: 100%;
 }
 
-.nav {
+.header__nav {
   display: flex;
   align-items: center;
 }
 
 /* Logo */
 
-.logo-header {
+.header__logo {
   display: inline-block;
   margin-right: 93px;
 
@@ -91,7 +92,7 @@ header {
   font-size: 26px;
 }
 
-.logo-top {
+.header__logo--accent {
   color: #000000;
   font-family: 'Raleway';
   font-weight: 700;
@@ -100,15 +101,15 @@ header {
 
 /* Navigation */
 
-.nav-list {
+.header__nav-list {
   display: flex;
 }
 
-.nav-list > li:not(:last-child) {
+.header__nav-list > li:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-item {
+.nav-list__item {
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -121,7 +122,7 @@ header {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current-nav-item {
+.nav-list__link--current {
   padding-top: 32px;
   padding-bottom: 32px;
   position: relative;
@@ -132,7 +133,7 @@ header {
   letter-spacing: 0.02em;
 }
 
-.current-nav-item::after {
+.nav-list__link--current::after {
   content: '';
   position: absolute;
   display: block;
@@ -146,12 +147,12 @@ header {
   background-color: var(--accent-color);
 }
 
-.contacts-top-list {
+.header__contacts-list {
   display: flex;
   margin-left: auto;
 }
 
-.contacts-top {
+.contacts-list__item {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -167,19 +168,19 @@ header {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-top-list > li:not(:last-child) {
+.header__contacts-list > li:not(:last-child) {
   margin-right: 50px;
 }
 
 /* Contacts icons */
 
-.mail-icon-top {
+.contacts-list__icon--mail {
   margin-right: 10px;
 
   fill: currentColor;
 }
 
-.phone-icon-top {
+.contacts-list__icon--phone {
   margin-right: 10px;
 
   fill: currentColor;
