--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -202,13 +202,13 @@ header {
   padding-bottom: 200px;
 }
 
-.hat-container {
+.hat--position {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.hat-title {
+.hat__title {
   display: inline-block;
   margin-bottom: 30px;
   max-width: 696px;
@@ -222,7 +222,7 @@ header {
   text-align: center;
 }
 
-.hat-button {
+.hat__button {
   display: inline-block;
   padding: 10px 32px;
   min-width: 200px;
@@ -243,33 +243,33 @@ header {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hat-button:hover,
-.hat-button:focus {
+.hat__button:hover,
+.hat__button:focus {
   color: var(--main-bg-color);
   background-color: #188ce8;
 }
 
 /* Descriptions section Особенности компании */
 
-.descriptions {
+.description {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.description-list {
+.description__list {
   display: flex;
   align-items: center;
 }
 
-.description-item {
+.description__item {
   max-width: 270px;
 }
 
-.description-item:not(:last-child) {
+.description__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.description-title {
+.description__title {
   margin-bottom: 10px;
 
   color: var(--main-text-color);
@@ -280,7 +280,7 @@ header {
   text-transform: uppercase;
 }
 
-.description {
+.description__text {
   color: var(--second-text-color);
   font-size: 14px;
   line-height: 1.71;
@@ -289,7 +289,7 @@ header {
 
 /* Descriptions icons */
 
-.description-item::before {
+.description__item::before {
   content: '';
   display: block;
   width: 270px;
@@ -301,33 +301,33 @@ header {
   background-position: center;
 }
 
-.description-item:nth-child(1)::before {
+.description__item:nth-child(1)::before {
   background-image: url(../images/antenna.svg);
   background-size: 70px;
 }
 
-.description-item:nth-child(2)::before {
+.description__item:nth-child(2)::before {
   background-image: url(../images/clock.svg);
   background-size: 70px;
 }
 
-.description-item:nth-child(3)::before {
+.description__item:nth-child(3)::before {
   background-image: url(../images/diagram.svg);
   background-size: 70px;
 }
 
-.description-item:nth-child(4)::before {
+.description__item:nth-child(4)::before {
   background-image: url(../images/astronaut.svg);
   background-size: 70px;
 }
 
 /* Examples Чем занимается компания */
 
-.examples {
+.example {
   padding-bottom: 94px;
 }
 
-.examples-title {
+.examples__title {
   margin-bottom: 50px;
 
   color: var(--main-text-color);
@@ -338,23 +338,23 @@ header {
   letter-spacing: 0.03em;
 }
 
-.example-list {
+.example__list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.example {
+.example__item {
   flex-basis: calc((100% - 60px) / 3);
 }
 
 /*  */
 
-.example-thumb {
+.example__wrapping {
   position: relative;
 }
 
-.example-description {
+.example__description {
   position: absolute;
   bottom: 0;
   width: 370px;
@@ -381,7 +381,7 @@ header {
   padding-bottom: 94px;
 }
 
-.team-title {
+.team__caption {
   margin-bottom: 50px;
 
   color: var(--main-text-color);
@@ -392,13 +392,13 @@ header {
   letter-spacing: 0.03em;
 }
 
-.team-list {
+.team__list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.team-li {
+.team__item {
   flex-basis: calc((100% - 90px) / 4);
 
   background-color: var(--main-bg-color);
@@ -408,7 +408,7 @@ header {
   width: 270px;
 }
 
-.team-li-name {
+.team-item__name {
   margin-top: 30px;
   margin-bottom: 10px;
 
@@ -420,7 +420,7 @@ header {
   letter-spacing: 0.03em;
 }
 
-.team-li-text {
+.team-item__text {
   margin-bottom: 16px;
 
   color: var(--second-text-color);
@@ -430,31 +430,13 @@ header {
   letter-spacing: 0.03em;
 }
 
-/*  */
+/* Soc-links 1st part */
 
-.team-soc-list {
-  display: flex;
-  justify-content: center;
+.team-item__soc-links {
   margin-bottom: 30px;
 }
 
-.soc-li {
-  width: 44px;
-  height: 44px;
-  margin-right: 10px;
-}
-
-.soc-li:last-child {
-  margin-right: 0;
-}
-
-.soc-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
+.soc-link__link--team-colors {
   background-color: var(--main-bg-color);
   color: var(--icons-main-color);
 
@@ -462,14 +444,14 @@ header {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-soc-icon {
-  fill: currentColor;
-}
-
-.soc-link:hover,
-.soc-link:focus {
+.soc-link__link--team-colors:hover,
+.soc-link__link--team-colors:focus {
   background-color: var(--accent-color);
   color: var(--main-bg-color);
+}
+
+.soc-link__icon {
+  fill: currentColor;
 }
 
 /* Clients section Постоянные клиенты */
@@ -479,7 +461,7 @@ header {
   padding-bottom: 58px;
 }
 
-.clients-title {
+.clients__caption {
   color: var(--main-text-color);
   margin-bottom: 50px;
   font-weight: 700;
@@ -489,19 +471,19 @@ header {
   letter-spacing: 0.03em;
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.client-li {
+.clients__item {
   width: 170px;
   height: 92px;
   flex-basis: calc((100% - 150px) / 6);
 }
 
-.client-link {
+.clients__link {
   display: flex;
   width: 100%;
   height: 100%;
@@ -514,14 +496,14 @@ header {
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-icon {
+.clients__icon {
   width: 100%;
   height: 100%;
   fill: currentColor;
 }
 
-.client-link:hover,
-.client-link:focus {
+.clients__link:hover,
+.clients__link:focus {
   border-color: var(--accent-color);
   color: var(--accent-color);
 }
@@ -584,7 +566,7 @@ header {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*  */
+/* Soc-links 2nd part */
 
 .footer__soc-links {
   margin-left: 70px;
@@ -622,18 +604,21 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+}
+
+.soc-link__link--footer-colors {
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--main-bg-color);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.soc-link__icon--footer {
+.soc-link__icon {
   fill: currentColor;
 }
 
-.soc-link__link:hover,
-.soc-link__link:focus {
+.soc-link__link--footer-colors:hover,
+.soc-link__link--footer-colors:focus {
   background-color: var(--accent-color);
 }
 
@@ -702,20 +687,21 @@ header {
 
 /* Main content Portfolio Портфолио */
 
-.portfolio-container {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
 /* Filters-buttons Кнопки меню-выбора */
 
-.filter-container {
+.portfolio__filters {
   display: flex;
-  margin-bottom: 50px;
+  align-items: center;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
-.filters {
+.portfolio__button {
   padding: 6px 22px 6px 22px;
 
   font-family: 'Roboto';
@@ -736,16 +722,16 @@ header {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter-container > li {
+.portfolio__filters > li {
   margin-right: 8px;
 }
 
-.filter-container > li:last-child {
+.portfolio__filters > li:last-child {
   margin-right: 0;
 }
 
-.filters:hover,
-.filters:focus {
+.portfolio__button:hover,
+.portfolio__button:focus {
   color: var(--main-bg-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -754,29 +740,29 @@ header {
 
 /* Boxes Ячейки портфолио-проектов */
 
-.boxes-container {
+.portfolio__gallery {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.box {
+.gallery__item {
   flex-basis: calc((100% - 60px) / 3);
   max-width: 370px;
 }
 
-.box-link {
+.gallery__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.box-link:hover,
-.box-link:focus {
+.gallery__link:hover,
+.gallery__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.box-title {
+.gallery__title {
   color: var(--main-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -784,14 +770,14 @@ header {
   letter-spacing: 0.06em;
 }
 
-.box-text {
+.gallery__text {
   color: var(--second-text-color);
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
 
-.box-border {
+.gallery__border {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
@@ -801,12 +787,12 @@ header {
 
 /* Всплывающий текст ячеек-проектов */
 
-.box-thumb {
+.gallery__link--wrap {
   position: relative;
   overflow: hidden;
 }
 
-.box-thumb-overlay {
+.gallery__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -826,7 +812,7 @@ header {
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.box-link:hover .box-thumb-overlay {
+.gallery__link:hover .gallery__overlay {
   transform: translateY(0);
 }
 
